# mutools

./: .gitignore  Cargo.toml  README.md  todo.md
client/: index.html  package-lock.json  package.json  webpack.config.js
client/src-react/: .eslintrc.json  app.tsx  app_view.tsx  color_theme.tsx  constants.tsx  dashboard.tsx  dropdown_menu.tsx  events.tsx  index.tsx  layout.tsx  menu.tsx  navbar.tsx  startup.tsx  toolbar.tsx
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
examples/: midi_input.rs  sound_generation.rs
mutools-client/: package-lock.json  package.json
mutools-client/src/: App.tsx
mutools-client/src-tauri/: Cargo.toml  tauri.conf.json
mutools-client/src-tauri/src/: .#rpc_client.rs  main.rs
rpc/: Cargo.toml
rpc/src/: client.rs  interface.rs  lib.rs  server.rs
src/: errors.rs  lib.rs  main.rs  project.rs
src/audio/: mod.rs  sample.rs
src/midi/: mod.rs
src/player/: midi_controller.rs  mod.rs
src/rpc_core/: mod.rs
src/server/: mod.rs
src/server_core/: mod.rs
src/signal/: generator.rs  mod.rs  sample.rs
src/sound/: frame.rs  generator.rs  mod.rs  playback.rs  playback_manager.rs  sample.rs  sample_sequence.rs  signal.rs  sound.rs  sound_buffer.rs  streams.rs  transform.rs
src/synthesizer/: oscillator.rs
src/tests/: mod.rs
src/transform/: crop_transform.rs  lerp_transform.rs  mod.rs  pitch_transform.rs
