[package]
name = "mutools"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = "0.7.0"
rodio = "0.14.0"
rand = "0.8.5"
rustfft = "6.0.1"
dasp = "0.11.0"
dasp_signal = "0.11.0"
dasp_sample = "0.11.0"
dasp_ring_buffer = "0.11.0"

anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.28", features = ["full"] }
tokio = { version = "1.0", features = ["macros"] }
clap = { version = "3.0.0-rc.9", features = ["derive"] }
