[package]
name = "mutools_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.28", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-serde = "0.8.0"
serde = { version = "1.0", features = ["derive"] }

clap = { version = "3.0.0-rc.9", features = ["derive"] }
